--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT - cw1</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <p>GIT - podstawowe polecenia</p>
-    <ul>
-        <li>git status</li>
-        <li>git commit</li>
-        <li>git init</li>
-        <li>git config</li>
-    </ul>
-    
+    <div class="conteiner">
+        <p>GIT - podstawowe polecenia</p>
+        <ul>
+            <li>git status</li>
+            <li>git commit</li>
+            <li>git init</li>
+            <li>git config</li>
+        </ul>
+    </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
