--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="conteiner">
         <p>GIT - podstawowe polecenia</p>
-        <ul>
+        <ul class="list">
             <li>git status</li>
             <li>git commit</li>
             <li>git init</li>
