adds new git command, adds simple RWD

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="conteiner">
+    <div class="conteiner1">
         <p>GIT - podstawowe polecenia</p>
         <ul class="list">
             <li>git status</li>
@@ -17,6 +17,17 @@
             <li>git init</li>
             <li>git config</li>
         </ul>
+        <button class="button">Kliknij mnie!</button>
+    </div>
+    <div class="conteiner2">
+        <p>GIT - inne polecenia</p>
+        <ul class="list">
+            <li>git branch</li>
+            <li>git clone</li>
+            <li>git push</li>
+            <li>git diff</li>
+        </ul>
+        <button class="button">Kliknij mnie!</button>
     </div>
     <script src="./script.js"></script>
 </body>
